--- a/VE_Xplorer/GE/SConscript
+++ b/VE_Xplorer/GE/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv ves_pkg LIBDIR GetPlatform execOsgPatTag buildDir osg_options vtk_options xerces_options')
+Import('baseEnv ves_pkg LIBDIR GetPlatform execOsgPatTag buildDir osg_options vtk_options xerces_options opal_options ode_options')
 
 srcs = Split("""
    cfdApp.cxx
@@ -38,6 +38,8 @@ env.Append(LIBPATH = [pj('#', buildDir, 'VE_Xplorer','SceneGraph'),
 vtk_options.apply( env )
 osg_options.apply( env )
 xerces_options.apply( env )
+ode_options.apply( env )
+opal_options.apply( env )
 env.ParseConfig('flagpoll Boost.Filesystem --libs --cflags')
 env.ParseConfig('flagpoll vrjuggler vpr TAO \
                           ACE TAO_IORInterceptor TAO_ObjRefTemplate TAO_Valuetype \
