--- a/VE_Xplorer/SceneGraph/SConscript
+++ b/VE_Xplorer/SceneGraph/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv ves_pkg LIBDIR execOsgPatTag osg_options vtk_options')
+Import('baseEnv ves_pkg LIBDIR execOsgPatTag osg_options vtk_options opal_options ode_options')
 
 sources = Split("""
     cfdClone.cxx
@@ -19,14 +19,17 @@ sources = Split("""
     cfdSequence.cxx
     cfdSwitch.cxx
     cfdTempAnimation.cxx
-    vtkActorToOSG.cpp
+    vtkActorToOSG.cxx
     vtkActorToPF.cxx
     Triangles.cxx
     Text.cxx
     ModelOccluder.cxx
     DCS.cxx
     SceneNode.cxx
+    FILE.cxx
+    PhysicsSimulator.cxx
 """)
+
 
 headers = Split("""
     cfdClone.h
@@ -50,6 +53,8 @@ headers = Split("""
     ModelOccluder.h
     DCS.h
     SceneNode.h
+    FILE.h
+    PhysicsSimulator.h
 """)
 
 ##srcs = map(lambda s: pj('#', 'VE_Xplorer', 'SceneGraph', s), srcs)
@@ -59,6 +64,9 @@ lib_env = ves_pkg.getEnv().Copy()
 lib_env.ParseConfig('flagpoll gmtl vrjuggler --libs --cflags')
 vtk_options.apply( lib_env )
 osg_options.apply( lib_env )
+ode_options.apply( lib_env )
+opal_options.apply( lib_env )
+
 if baseEnv['StaticOnly'] == "no":
    lib = ves_pkg.createStaticAndSharedLibrary('VE_SceneGraphLib%s' %(execOsgPatTag),
                                                         lib_env,
