Added spinctld.cxx to GUI_UtilitiesLib.vcproj

--- a/VE_Conductor/Utilities/VE_ConductorGUI_UtilitiesLib.vcproj
+++ b/VE_Conductor/Utilities/VE_ConductorGUI_UtilitiesLib.vcproj
@@ -258,6 +258,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\VE_Builder\Utilities\gui\spinctld.cxx"
+				>
+			</File>
+			<File
 				RelativePath=".\Tag.cxx"
 				>
 			</File>
