removed VE_SUITE_HOME from being needed with xplorer and conductor.

--- a/VE_Conductor/Framework/SConscript
+++ b/VE_Conductor/Framework/SConscript
@@ -31,6 +31,7 @@ srcs = Split("""
    UI_TeacherTab.cxx
    UI_TransientDialog.cxx
    UserPreferences.cxx
+   ../DefaultPlugin/DefaultPlugin.cxx
 """)
 
 env = ves_pkg.getEnv().Copy()
