--- a/VE_Conductor/SConscript
+++ b/VE_Conductor/SConscript
@@ -4,8 +4,8 @@ conductorSubdirs = Split("""
     GUIPlugin
     Utilities
     Framework
-    DefaultPlugin
 """)
+##    DefaultPlugin
 
 ##Run SConscript files in all of those folders.
 for d in conductorSubdirs:
