--- a/VE_Xplorer/SConscript
+++ b/VE_Xplorer/SConscript
@@ -14,8 +14,8 @@ xplorerSubdirs = Split("""
     GraphicalPlugin
     XplorerNetwork
     GE
-    DefaultGraphicalPlugin
 """)
+##    DefaultGraphicalPlugin
 
 ##Run SConscript files in all of those folders.
 for d in xplorerSubdirs:
