--- a/VE_Xplorer/XplorerNetwork/SConscript
+++ b/VE_Xplorer/XplorerNetwork/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv ves_pkg LIBDIR execOsgPatTag buildDir osg_options vtk_options xerces_options')
+Import('baseEnv ves_pkg LIBDIR execOsgPatTag buildDir osg_options vtk_options xerces_options opal_options ode_options')
 
 sources = Split("""
    cfdExecutive.cxx
@@ -14,6 +14,7 @@ sources = Split("""
    NetworkSystemView.cxx
    temp/StringTokenizer.cxx
    temp/bkpparser.cxx
+   ../DefaultGraphicalPlugin/DefaultGraphicalPlugin.cxx
 """)
 
 headers = Split("""
@@ -26,6 +27,7 @@ headers = Split("""
    NetworkSystemView.h
    temp/StringTokenizer.h
    temp/bkpparser.h
+   ../DefaultGraphicalPlugin/DefaultGraphicalPlugin.h
 """)
 
 lib_env = ves_pkg.getEnv().Copy()
@@ -57,6 +59,8 @@ lib_env.ParseConfig('flagpoll vrjuggler TAO \
 vtk_options.apply( lib_env )
 osg_options.apply( lib_env )
 xerces_options.apply( lib_env )
+ode_options.apply( lib_env )
+opal_options.apply( lib_env )
 if baseEnv['StaticOnly'] == "no":
    lib = ves_pkg.createStaticAndSharedLibrary('VE_XplorerNetworkLib%s' %(execOsgPatTag),
                                                         lib_env,
