--- a/VE_Xplorer/DefaultGraphicalPlugin/SConscript
+++ b/VE_Xplorer/DefaultGraphicalPlugin/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv ves_pkg LIBDIR execOsgPatTag buildDir vtk_options osg_options xerces_options GetPlatform opal_options ode_options')
+Import('baseEnv ves_pkg LIBDIR execOsgPatTag buildDir vtk_options osg_options xerces_options GetPlatform opal_options')
 
 sources = Split("""
     DefaultGraphicalPlugin.cxx
@@ -32,7 +32,7 @@ lib_env.ParseConfig('flagpoll vrjuggler --libs --cflags')
 vtk_options.apply( lib_env )
 osg_options.apply( lib_env )
 xerces_options.apply( lib_env )
-ode_options.apply( lib_env )
+##ode_options.apply( lib_env )
 opal_options.apply( lib_env )
 
 if GetPlatform() == 'darwin':
