the _CLUSTER variable is not longer used in xplorer therefore all the cluster builds can be removed. to run clustered the user must specify -VESCluster on the command line for xplorer.

--- a/VE_Xplorer/SConscript
+++ b/VE_Xplorer/SConscript
@@ -22,5 +22,5 @@ for d in xplorerSubdirs:
    #print " dir ", d
    SConscript( dirs = d )
 
-baseEnv[ 'cluster' ] = 'yes'
-SConscript( dirs = "GE", build_dir=pj(buildDir,'VE_Xplorer','GE','cluster'))
+#baseEnv[ 'cluster' ] = 'yes'
+#SConscript( dirs = "GE", build_dir=pj(buildDir,'VE_Xplorer','GE','cluster'))
