--- a/VE_Builder/Utilities/mk/addNormals2Poly/addNormals2Poly.vcproj
+++ b/VE_Builder/Utilities/mk/addNormals2Poly/addNormals2Poly.vcproj
@@ -181,7 +181,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\addNormals2Poly.cpp"
+				RelativePath="..\..\addNormals2Poly.cxx"
 				>
 			</File>
 		</Filter>
