--- a/VE_Builder/Utilities/mk/mergeVertices/mergeVertices.vcproj
+++ b/VE_Builder/Utilities/mk/mergeVertices/mergeVertices.vcproj
@@ -181,7 +181,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\mergeVertices.cpp"
+				RelativePath="..\..\mergeVertices.cxx"
 				>
 			</File>
 		</Filter>
