--- a/VE_Conductor/DefaultPlugin/DefaultPlugin.vcproj
+++ b/VE_Conductor/DefaultPlugin/DefaultPlugin.vcproj
@@ -108,7 +108,7 @@
 		<Configuration
 			Name="dbg|Win32"
 			OutputDirectory="$(VE_SUITE_HOME)/bin/Plugins/UI/win32"
-			IntermediateDirectory=".\GUIPluginLib\$(ConfigurationName)"
+			IntermediateDirectory=".\DefaultPlugin\$(ConfigurationName)"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			UseOfMFC="0"
