--- a/VE_Xplorer/GE/SConscript
+++ b/VE_Xplorer/GE/SConscript
@@ -3,7 +3,7 @@ import os, sys, string
 pj = os.path.join
 
 Import('baseEnv ves_pkg LIBDIR GetPlatform execOsgPatTag buildDir osg_options vtk_options xerces_options opal_options ode_options')
-
+print "build diri %s ", buildDir
 srcs = Split("""
    cfdApp.cxx
    cfdAppWrapper.cxx
@@ -23,7 +23,8 @@ env.Append(
                    'VE_XplorerLib%s' %(execOsgPatTag),
                    'VE_XplorerNetworkLib%s' %(execOsgPatTag),
                    'GraphicalPlugin%s' %(execOsgPatTag)])
-env.Append(LIBPATH = [pj('#', buildDir, 'VE_Xplorer','SceneGraph'),
+if not buildDir == "":
+   env.Append(LIBPATH = [pj('#', buildDir, 'VE_Xplorer','SceneGraph'),
                         pj('#', buildDir, 'VE_Xplorer','XplorerHandlers'),
                         pj('#', buildDir, 'VE_Xplorer','Utilities'),
                         pj('#', buildDir, 'VE_Xplorer','SceneGraph','Utilities'),
@@ -38,15 +39,15 @@ env.Append(LIBPATH = [pj('#', buildDir, 'VE_Xplorer','SceneGraph'),
 vtk_options.apply( env )
 osg_options.apply( env )
 xerces_options.apply( env )
-ode_options.apply( env )
-opal_options.apply( env )
 env.ParseConfig('flagpoll Boost.Filesystem --libs --cflags')
-env.ParseConfig('flagpoll vrjuggler vpr TAO \
+env.ParseConfig('flagpoll TAO \
                           ACE TAO_IORInterceptor TAO_ObjRefTemplate TAO_Valuetype \
                           TAO_CosNaming TAO_Svc_Utils TAO_IORTable TAO_Messaging \
                           TAO_PortableServer TAO_BiDirGIOP TAO_AnyTypeCode \
                           --libs --cflags')
-env.ParseConfig('flagpoll vrjuggler --get-vrj-ogl-libs')
+env.ParseConfig('flagpoll vrjuggler --get-vrj-ogl-libs --libs --cflags')
+ode_options.apply( env )
+opal_options.apply( env )
    
 prog = ves_pkg.createProgram('project%s' %(execOsgPatTag), env, 'bin')
 prog.addSources( srcs )
