--- a/VE_Builder/Preprocessor/Preprocessor.vcproj
+++ b/VE_Builder/Preprocessor/Preprocessor.vcproj
@@ -41,7 +41,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;$(VE_SUITE_HOME)&quot;;&quot;$(VTK_HOME)\include\vtk-5.0&quot;"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;VTK44"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;VTK44;_CRT_SECURE_NO_DEPRECATE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
