[Bug 728] This should be working now. Needs testing on platforms other than windows

--- a/VE_Xplorer/XplorerHandlers/VE_XplorerLib.vcproj
+++ b/VE_Xplorer/XplorerHandlers/VE_XplorerLib.vcproj
@@ -983,6 +983,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\QCClearDataEH.cxx"
+				>
+			</File>
+			<File
 				RelativePath=".\QCLoadFileEH.cxx"
 				>
 			</File>
@@ -1479,6 +1483,10 @@
 			</File>
 			<File
 				RelativePath=".\MaterialUpdateEH.h"
+				>
+			</File>
+			<File
+				RelativePath=".\QCCleaDatarEH.h"
 				>
 			</File>
 			<File
