corrected makefile to look for cxx

--- a/VE_Builder/vtkTo3DTexture/tcGUI/Makefile
+++ b/VE_Builder/vtkTo3DTexture/tcGUI/Makefile
@@ -1,6 +1,6 @@
 # Create the OS-dependent directory name
-MPI_APP = FALSE 
-#MPI_APP = TRUE
+#MPI_APP = FALSE 
+MPI_APP = TRUE
 ifeq ($(MPI_APP), TRUE)
    APP_NAME= $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)/vtkTo3DTextureMPI
 else
@@ -15,10 +15,10 @@ all:
 srcdir= .
 
 SRCS=\
-   flowTexture.cpp \
-   tcApp.cpp \
-   tcFrame.cpp \
-   textureCreator.cpp
+   flowTexture.cxx \
+   tcApp.cxx \
+   tcFrame.cxx \
+   textureCreator.cxx
 
 # Specify the OS-dependent directory name for object files and depends
 ifeq ($(MPI_APP), TRUE)
